Bugfix: adding an overflow seems to require adding additional padding

--- a/sites/all/themes/genesis_mcneese/css/standard.css
+++ b/sites/all/themes/genesis_mcneese/css/standard.css
@@ -170,7 +170,7 @@ div#local-tasks ul.primary {
   border-bottom: none;
 
   margin: 0;
-  padding: 2px 0 2px 8px;
+  padding: 5px 0 2px 8px;
 
   overflow-x: auto;
 }
